--- a/notebooks/create-orga-split.ipynb
+++ b/notebooks/create-orga-split.ipynb
@@ -2,45 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging, json\n",
+    "import logging, random\n",
     "logging.basicConfig(format=\"%(asctime)s %(levelname)s - %(message)s\", level=logging.INFO)\n",
     "\n",
     "import pandas as pd\n",
     "pd.set_option(\"display.min_rows\", 4)\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from sapsam import parser, constants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-13 11:57:14,996 INFO - Found 103 csvs\n",
-      "2022-10-13 11:57:14,997 INFO - Starting to parse 103 cvs excluding model json\n",
-      "100%|██████████| 103/103 [02:56<00:00,  1.71s/it]\n",
-      "2022-10-13 12:00:11,759 INFO - Parsed 1021471 models\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_meta = parser.parse_model_metadata()"
+    "from sapsam import parser "
    ]
   },
   {
@@ -49,35 +24,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_meta = parser.parse_model_metadata()\n",
     "df_meta.to_pickle(\"df_meta_pickle.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c41660388a04449a995dccf97d894f46    33310\n",
-      "5e1278d2bfce434b95e80ab3625cdc63    15030\n",
-      "                                    ...  \n",
-      "a89000460b074f3488c31b4c4f419ae4        1\n",
-      "f824addab09a4ad0a2edd07f8e96ad22        1\n",
-      "Name: organization_id, Length: 45536, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
     "df_meta = pd.read_pickle(\"df_meta_pickle.pkl\")\n",
-    "num_of_organizations = df_meta.organization_id.value_counts()\n",
-    "num_of_organizations.to_csv('num_of_organizations.csv')\n",
-    "print(num_of_organizations)\n",
-    "\n",
     "organizations = df_meta.organization_id.unique()\n",
     "random.shuffle(organizations)\n",
     "\n",
